adl-frontend/src/test/resources/unit/error/semantic/attributes/attr71.adl
//#SemanticError GroupId=MADL ErrorId=INCOMPATIBLE_ARGUMENT_VALUE line=4
// argument: integer assigned to string
primitive attributes.attr71 extends attr7(
 2) {}
